使用 Colaboratory 建立

--- a/hello.ipynb
+++ b/hello.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpsggslEMv+jEUfb3R1iNc",
+      "authorship_tag": "ABX9TyMtRYtOV3QZAc6miidlCXZp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "zqJzlw1eTtmH",
         "colab": {
@@ -61,7 +61,7 @@
         },
         "outputId": "3268f3db-de12-41fa-dbf4-5a16559aa7a3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,9 +74,239 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 1"
+      ],
       "metadata": {
         "id": "UWW4T58hVWq6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 2"
+      ],
+      "metadata": {
+        "id": "Y4mRjf5mcLPD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c = 3"
+      ],
+      "metadata": {
+        "id": "ZnnJpx2XcMb6"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b,c"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uiFPd9AScT-R",
+        "outputId": "ede7e52c-53b3-4999-86f9-5dc3d71059ac"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = e = f =4"
+      ],
+      "metadata": {
+        "id": "p_c52LJQcZ7R"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d,e,f"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ysevrm2qeekh",
+        "outputId": "c7c995a1-38e0-4428-8af2-553e4773a3ac"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4, 4, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age,name = 18,'Alice'"
+      ],
+      "metadata": {
+        "id": "h6eZJrjPfDob"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T5vZzvYvegog",
+        "outputId": "56a077af-4222-43c8-e395-e23d98aa7b09"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "-0G7plVFfR1A",
+        "outputId": "9b325003-2df8-4020-e12e-71853363bcb6"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Alice'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " age,name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2iuE582cfVBY",
+        "outputId": "d19f2d04-4da0-49c7-8f71-9abc6dc344b7"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(18, 'Alice')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Alice = 18"
+      ],
+      "metadata": {
+        "id": "JPdgdsGwfvxh"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Alice"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FpLKLnq2gtYQ",
+        "outputId": "cf906de7-c85f-44f7-dccd-cde3be6e0f5e"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g = 1\n",
+        "#h = 2\n",
+        "i = 3"
+      ],
+      "metadata": {
+        "id": "7eE0OT5Rgvww"
       },
       "execution_count": null,
       "outputs": []
